Fixed vertical align

--- a/pitch/index.css
+++ b/pitch/index.css
@@ -9,7 +9,6 @@ html {
 body {
   margin: 0;
   background-color: #e4f7e8;
-  padding-top: 10vh;
 }
 
 h1, h2, p {
